[gd_scene load_steps=10 format=3 uid="uid://c86j5mvm3d60u"]

[ext_resource type="PackedScene" uid="uid://j6138fnasuli" path="res://Modules/Modules/2D - Interact/Hacker Interact/hack_interactable2d.tscn" id="1_aqdqg"]
[ext_resource type="Script" path="res://Modules/Modules/2D - Interact/Hacker Interact/Hacking/hackable.gd" id="1_e8as4"]
[ext_resource type="Script" path="res://Modules/Modules/2D - Interact/Developer Interact/Dev_Tasks/Update Antivirus/Antivirus.gd" id="3_52ie4"]
[ext_resource type="Theme" uid="uid://5whm1igkt23h" path="res://addons/GD-Sync/UI/ConfigMenu/GD-Theme.tres" id="4_cj3gn"]
[ext_resource type="FontFile" uid="uid://dpr88u44817be" path="res://Assets/fonts/Modenine-2OPd.ttf" id="5_31851"]

[sub_resource type="Animation" id="Animation_1xnax"]
resource_name = "Close_Panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hack/Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_kte5i"]
resource_name = "Open_Panel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hack/Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6smnn"]
_data = {
"Close_Panel": SubResource("Animation_1xnax"),
"Open_Panel": SubResource("Animation_kte5i")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2egjy"]
radius = 370.022

[node name="Hackable" type="Node2D"]
visible = false
script = ExtResource("1_e8as4")

[node name="HackScreen" type="CanvasLayer" parent="."]
layer = 120

[node name="Hack" type="Control" parent="HackScreen"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-3, 189)
script = ExtResource("3_52ie4")

[node name="Panel" type="PanelContainer" parent="HackScreen/Hack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -77.0
offset_right = 168.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(165, 366)
theme = ExtResource("4_cj3gn")

[node name="VBoxContainer" type="VBoxContainer" parent="HackScreen/Hack/Panel"]
layout_mode = 2

[node name="LabelMargin" type="MarginContainer" parent="HackScreen/Hack/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="HackScreen/Hack/Panel/VBoxContainer/LabelMargin"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_31851")
theme_override_font_sizes/font_size = 30
text = "Hack Player?"
horizontal_alignment = 1

[node name="Hacking" type="MarginContainer" parent="HackScreen/Hack/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Terminal" type="Label" parent="HackScreen/Hack/Panel/VBoxContainer/Hacking"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
autowrap_mode = 1

[node name="ButtonsMargin" type="MarginContainer" parent="HackScreen/Hack/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HackScreen/Hack/Panel/VBoxContainer/ButtonsMargin"]
layout_mode = 2

[node name="Hack" type="Button" parent="HackScreen/Hack/Panel/VBoxContainer/ButtonsMargin/HBoxContainer"]
z_index = 100
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_31851")
text = "Hack!"

[node name="No" type="Button" parent="HackScreen/Hack/Panel/VBoxContainer/ButtonsMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_31851")
text = "Close"

[node name="HackAnim" type="AnimationPlayer" parent="HackScreen"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6smnn")
}

[node name="hack_interactable" parent="." instance=ExtResource("1_aqdqg")]
interact_name = "Hack player"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hack_interactable"]
shape = SubResource("CircleShape2D_2egjy")

[connection signal="pressed" from="HackScreen/Hack/Panel/VBoxContainer/ButtonsMargin/HBoxContainer/Hack" to="." method="_on_hack_pressed"]
